Fixed formatting isue

--- a/index.html
+++ b/index.html
@@ -20,80 +20,84 @@
                 <a class="icon-btn mail" href="mailto:siddhantashrestha.ss@gmail.com"
                     title="Email">
                     <i class="fa-solid fa-envelope"></i>
-                </a>
-
-                <span class="dot-sep" aria-hidden="true">•</span>
-
-                <a class="icon-btn linkedin"
-                    href="https://www.linkedin.com/in/siddhantashrestha/"
-                    target="_blank" rel="noopener" title="LinkedIn">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-            </p>
+                <div class="profile-image-container">
+                    <div>
+                        <img src="images/logos/profile.jpg" alt="Profile Image" class="profile-image" />
+                        <div style="text-align: center; margin-top: 10px;">
+                            B.S. and M.S. in Computer Engineering, University of Massachusetts Amherst
+                        </div>
+                        <div style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
+                            <a href="mailto:email@example.com"><img src="images/logos/email.svg" alt="Email" width="32" height="32"></a>
+                            <a href="https://linkedin.com/in/siddhanta"><img src="images/logos/linkedin.svg" alt="LinkedIn" width="32" height="32"></a>
+                        </div>
+                    </div>
+                </div>
         </figure>
       
         <div class="hero-copy">
-            <h2 class="name">Siddhanta Shrestha ｜ सिद्धान्त श्रेष्ठ</h1>
-            <div class="line"></div>
-            
+          <h2 class="name">Siddhanta Shrestha ｜ सिद्धान्त श्रेष्ठ</h2>
+          <div class="line"></div>
 
-            <p class="para">
-            I'm a Controls Engineer passionate about building reliable systems for demanding environments. At Caterpillar, 
-            I design and validate embedded control systems for heavy machinery, working across the full development 
-            lifecycle—from Simulink model design and software integration to rigorous bench, HIL, and SIL testing.
-            </p>
+          <p class="para">
+              I'm a Controls Engineer fascinated by the intersection of physics, software, and intelligent systems. 
+              At Caterpillar, I design and validate embedded control systems for heavy machinery, working across the full 
+              development lifecycle—from Simulink model design and software integration to rigorous bench testing. 
+              My work focuses on creating robust control architectures that adapt to uncertainty while maintaining reliability.
+          </p>
 
-            <p class="para">
-            I earned my B.S. and M.S. in Computer Engineering from the University of Massachusetts Amherst, developing 
-            expertise in embedded systems, real-time software, and hardware-software integration. Beyond work, I mentor 
-            FTC robotics teams, guiding students through system design and competitive challenges while staying 
-            connected to engineering fundamentals.
-            </p>
+          <p class="para">
+              With a foundation in Computer Engineering from UMass Amherst (B.S. and M.S.), I’ve developed expertise in 
+              embedded systems and real-time software, driven by the challenge of connecting theoretical principles to 
+              real-world impact. This mindset extends to my work mentoring the FTC robotics team 
+              <em>Fast but not Furious (FBNF)</em>, where I guide students through trajectory planning, debugging, and 
+              systems integration.
+          </p>
 
-            <p class="para">
-            What drives me is tackling engineering challenges where precision and reliability are non-negotiable—developing 
-            systems that must perform flawlessly in the real world.
-            </p>
-
+          <p class="para">
+              What drives me is the belief that today’s control engineering challenges—whether in machinery, robotics, 
+              or future space systems—are built on the same principles of intelligent adaptation and dependable performance. 
+              I’m particularly passionate about closed-loop and adaptive control systems, and I see them as key technologies 
+              that will push the boundaries of what’s possible—from Earth to space.
+          </p>
         </div>
         <!-- NEW: full-width skills block spanning both columns -->
         <div class="skills-blade skills-wide" aria-label="Key skills">
-            <h3 class="eyebrow" style="text-align:center;">Core Technical Skills</h3>
+            <h3 class="eyebrow" style="text-align:center;">Technical Expertise & Tools</h3>
             <div class="skills-grid">
                 <div class="skill-group">
-                    <h4>Programming & Scripting</h4>
+                    <h4>Control Systems Development</h4>
                     <ul>
-                    <li>Python</li>
-                    <li>C/C++</li>
-                    <li>MATLAB</li>
-                    <li>Verilog</li>
+                    <li><span class="hl">MATLAB/Simulink:</span> Model-based design for TTT control systems</li>
+                    <li><span class="hl">Python:</span> Test automation and data processing pipelines</li>
+                    <li><span class="hl">AUTOSAR:</span> ECU software architecture and integration</li>
+                    <li><span class="hl">Vector CANape:</span> ECU calibration and diagnostics</li>
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h4>Software & Tools</h4>
+                    <h4>Systems & Software</h4>
                     <ul>
-                    <li>MATLAB/Simulink</li>
-                    <li>AUTOSAR</li>
-                    <li>Vector CANape</li>
-                    <li>Git (Version Control)</li>
+                    <li><span class="hl">C/C++:</span> Real-time embedded systems programming</li>
+                    <li><span class="hl">HIL/SIL Testing:</span> Validation frameworks for safety-critical systems</li>
+                    <li><span class="hl">Git:</span> Version control and collaborative development</li>
+                    <li><span class="hl">Verilog:</span> Digital system design and FPGA programming</li>
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h4>Technical Expertise</h4>
+                    <h4>Core Competencies</h4>
                     <ul>
-                    <li>Embedded & Real-Time Systems</li>
-                    <li>Circuit Design & Microcontroller Programming</li>
-                    <li>HIL/SIL Testing & Validation</li>
-                    <li>Safety-Critical System Design</li>
+                    <li>Embedded & Real-Time Systems Architecture</li>
+                    <li>Control System Design & Implementation</li>
+                    <li>Hardware-Software Integration</li>
+                    <li>Safety-Critical System Validation</li>
                     </ul>
                 </div>
                 <div class="skill-group">
-                    <h4>Currently Learning</h4>
+                    <h4>Expanding Expertise</h4>
                     <ul>
-                    <li>Applied Physics (self-study)</li>
-                    <li>PCB Design & Layout</li>
-                    <li>Advanced Control Theory</li>
-                    <li>Space Systems & Robotics</li>
+                    <li><span class="hl">Advanced Control Theory:</span> Adaptive and robust control systems</li>
+                    <li><span class="hl">Space Systems:</span> Attitude control and life support systems</li>
+                    <li><span class="hl">PCB Design:</span> Custom hardware development</li>
+                    <li><span class="hl">Applied Physics:</span> System modeling and simulation</li>
                     </ul>
                 </div>
             </div>
@@ -101,226 +105,7 @@
     </div>
   </section>
 
-  <!-- =============== ENGINEERING FOCUS =============== -->
-  <section id="focus" class="hero rev">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img src="./images/profile1.jpg" alt="Engineering focus"/>
-      </figure>
+  
 
-      <div class="hero-copy">
-        <h2 class="title">Engineering Focus ｜ इन्जिनियरिङ केन्द्रबिन्दु</h2>
-        <div class="line"></div>
-
-        <p class="para">
-          I design and refine <span class="hl">Simulink</span> models for control features, then validate them
-          through structured test plans that move from manual bench checks to automated procedures. I integrate logic
-          within <span class="hl">AUTOSAR</span> architectures and use <span class="hl">Python</span> automation
-          to generate tests, stand up simulations, and tie into verification frameworks. My focus is shortening
-          the path from model to release by proving performance in <span class="hl">HIL/SIL</span> before deployment.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== EXPERIENCE: CATERPILLAR =============== -->
-  <section id="experience-cat" class="hero">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img src="./images/cat-hero.jpg" alt="Caterpillar machines"/>
-      </figure>
-
-      <div class="hero-copy">
-        <div class="title-row">
-          <h2 class="title tight">Experience ｜ अनुभव</h2>
-        </div>
-        <div class="line"></div>
-
-        <h3 class="org with-logo">
-          <img class="logo inline-logo" src="./images/logos/caterpillar.png" alt="Caterpillar">
-          Caterpillar Inc.
-        </h3>
-        <p class="muted meta">Full-time · 2 yrs 3 mos · United States · On-site</p>
-
-        <div class="role-split">
-          <!-- LEFT: Controls Engineer -->
-          <div class="role-col">
-            <h4 class="role-title">Controls Engineer</h4>
-            <p class="muted meta">Oct 2024 – Present · Peoria, IL</p>
-            <p class="para">
-              I design and refine <span class="hl">Simulink</span> control models to enhance machine functionality.
-              I flash software to <span class="hl">ECMs</span>, verify behavior on benches, and validate with
-              <span class="hl">HIL/SIL</span>. I troubleshoot discrepancies, improve responsiveness, and integrate
-              <span class="hl">AUTOSAR</span>-compliant control logic. I also use <span class="hl">Python</span>
-              to automate verification workflows, accelerating test generation and simulation setup.
-            </p>
-          </div>
-
-          <div class="vbar"></div>
-
-          <!-- RIGHT: ERD Rotations -->
-          <div class="role-col">
-            <h4 class="role-title">ERD — Senior Associate Engineer (Rotations)</h4>
-            <p class="muted meta">Jul 2023 – Oct 2024 · Peoria, IL</p>
-
-            <p class="para">
-              <span class="hl">CTCT Test &amp; Validation (Grade Control):</span> I validated factory and aftermarket
-              systems to ensure software-hardware integration.  
-              <span class="hl">CEAL Embedded Software:</span> I implemented real-time modules for engine controllers,
-              focusing on robustness and portability.  
-              <span class="hl">Electro-Hydraulic Systems:</span> I developed <span class="hl">HIL/SIL</span> models,
-              improved simulation fidelity, and aligned them with hydraulic schematics.  
-              <span class="hl">Steering &amp; Braking:</span> I integrated Simulink models with AUTOSAR components and
-              wrote Python scripts to transform large-scale datasets into functional C code, streamlining pipelines.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== EXPERIENCE: FTC =============== -->
-  <section id="experience-ftc" class="hero rev">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img class="logo" src="./images/logos/ftc.png" alt="FIRST Tech Challenge">
-      </figure>
-
-      <div class="hero-copy">
-        <h3 class="org with-logo">
-          <img class="logo inline-logo" src="./images/logos/ftc.png" alt="FTC">
-          Design Mentor &amp; Coach — FTC Robotics (FBNF)
-        </h3>
-        <p class="muted meta">Sep 2024 – Present · Hybrid</p>
-        <div class="line"></div>
-
-        <p class="para">
-          I mentor students on mechanical design, system architecture, and programming practices. I run workshops
-          on <span class="hl">Onshape</span> CAD and robust software workflows, and I push students to document
-          decisions clearly. The goal isn’t just building robots—it’s building a professional mindset: experiment,
-          test, and communicate findings with clarity.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== EXPERIENCE: UMass (condensed) =============== -->
-  <section id="experience-umass" class="hero">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img class="logo" src="./images/logos/umass.png" alt="UMass Amherst">
-      </figure>
-
-      <div class="hero-copy">
-        <h3 class="org with-logo">
-          <img class="logo inline-logo" src="./images/logos/umass.png" alt="UMass">
-          University of Massachusetts Amherst
-        </h3>
-        <p class="muted meta">Jun 2021 – May 2022 · Amherst, MA</p>
-        <div class="line"></div>
-        <p class="para">
-          While completing my M.S., I worked as a Technical Assistant, Peer Advisor, and Tour Guide.
-          I supported engineering students with data systems, advised on courses and opportunities,
-          and represented the program to prospective students. These roles strengthened my ability
-          to explain technical paths to diverse audiences—a skill I now apply in mentoring and collaboration.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== PROJECTS =============== -->
-  <section id="projects" class="hero rev">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img src="./images/projects.jpg" alt="Projects and work in progress">
-      </figure>
-
-      <div class="hero-copy">
-        <h2 class="title">Projects ｜ परियोजना</h2>
-        <div class="line"></div>
-
-        <h3 class="org">Physics Notebook Website</h3>
-        <p class="para">
-          I’m building a personal web platform to capture and expand my learning in
-          <span class="hl">physics and astrophysics</span>. It combines an interactive timeline,
-          annotation features, and AI-assisted search to connect concepts across notes. This project
-          strengthens my grasp of physics while sharpening skills in <span class="hl">React</span>,
-          <span class="hl">PWA design</span>, and modern web development.
-        </p>
-
-        <div class="micro-divider"></div>
-
-        <h3 class="org">The 100 Prequel Rewrite — “The 5”</h3>
-        <p class="para">
-          I’m writing a reimagined prequel novel to <em>The 100</em>, centered on Becca Franko and an
-          international space race. The project blends <span class="hl">scientific research</span> with
-          creative storytelling: AI ethics, radiation adaptation biology, and orbital politics.
-          It challenges me to manage <span class="hl">complex timelines</span>, multiple character arcs,
-          and connect <span class="hl">real science</span> to speculative fiction.
-        </p>
-
-        <div class="micro-divider"></div>
-
-        <h3 class="org">Upcoming</h3>
-        <p class="para">
-          I plan to merge my <span class="hl">controls engineering</span> background with space systems research.
-          Projects in development include spacecraft attitude control simulations in MATLAB/Simulink and
-          expanding the Physics Notebook into a collaborative platform for STEM learners.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== EDUCATION =============== -->
-  <section id="education" class="hero">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img class="logo" src="./images/logos/umass.png" alt="UMass Amherst">
-      </figure>
-
-      <div class="hero-copy">
-        <h2 class="title">Education ｜ शिक्षा</h2>
-        <div class="line"></div>
-        <p class="para">
-          <strong>University of Massachusetts Amherst</strong><br/>
-          B.S. &amp; M.S., Computer Engineering — focus in embedded systems, real-time applications,
-          and control systems.
-        </p>
-        <p class="para">
-          <strong>Skills &amp; Tools:</strong>
-          Simulink, MATLAB, Python, Git, AUTOSAR, Vector CANape, HIL, SIL, Google Test, Data Analysis,
-          Onshape, Android Studio, Final Cut Pro, Swift/iOS, Excel.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <!-- =============== CONTACT =============== -->
-  <section id="contact" class="hero rev">
-    <div class="hero-wrap">
-      <figure class="hero-media">
-        <img src="./images/mentorship.jpg" alt="Contact">
-      </figure>
-
-      <div class="hero-copy">
-        <h2 class="title">Contact ｜ सम्पर्क</h2>
-        <div class="line"></div>
-        <p class="para">
-          The best way to reach me is email. I’m always open to collaborating on controls engineering,
-          model-based development, or educational projects in robotics and STEM.
-        </p>
-        <p class="para">
-          <a class="link" href="mailto:siddhantashrestha1997@gmail.com">siddhantashrestha1997@gmail.com</a><br/>
-          <a class="link" href="https://www.linkedin.com/in/siddhantashrestha/" target="_blank" rel="noopener">
-            linkedin.com/in/siddhantashrestha
-          </a>
-        </p>
-        <p class="para">
-          <strong>Languages:</strong> Nepali (Native), English (Fluent)<br/>
-          <strong>Interests:</strong> Robotics mentoring, physics &amp; space, creative writing, photography
-        </p>
-      </div>
-    </div>
-  </section>
 </body>
 </html>
