Fixed formatting isue

--- a/index.html
+++ b/index.html
@@ -16,22 +16,14 @@
         <figure class="hero-media">
             <img src="./images/profile.jpg" alt="Siddhanta Shrestha"/>
             <p class="muted">B.S. and M.S. in Computer Engineering, University of Massachusetts Amherst</p>
-            <p class="contact-icons" aria-label="Contact links">
-                <a class="icon-btn mail" href="mailto:siddhantashrestha.ss@gmail.com"
-                    title="Email">
+            <div class="contact-icons" aria-label="Contact links">
+                <a class="icon-btn mail" href="mailto:siddhantashrestha.ss@gmail.com" title="Email">
                     <i class="fa-solid fa-envelope"></i>
-                <div class="profile-image-container">
-                    <div>
-                        <img src="images/logos/profile.jpg" alt="Profile Image" class="profile-image" />
-                        <div style="text-align: center; margin-top: 10px;">
-                            B.S. and M.S. in Computer Engineering, University of Massachusetts Amherst
-                        </div>
-                        <div style="display: flex; justify-content: center; gap: 20px; margin-top: 15px;">
-                            <a href="mailto:email@example.com"><img src="images/logos/email.svg" alt="Email" width="32" height="32"></a>
-                            <a href="https://linkedin.com/in/siddhanta"><img src="images/logos/linkedin.svg" alt="LinkedIn" width="32" height="32"></a>
-                        </div>
-                    </div>
-                </div>
+                </a>
+                <a class="icon-btn linkedin" href="https://www.linkedin.com/in/siddhantashrestha/" title="LinkedIn" target="_blank" rel="noopener">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+            </div>
         </figure>
       
         <div class="hero-copy">
