--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <header class="sidebar-header"></header>
                 <section class="sidebar-wrapper">
                     <ul class="sidebar-list">
-                        <li><a class="sidebar-link" href="#about">About Me</a></li>
-                        <li><a class="sidebar-link" href="#skills">Skills</a></li>
-                        <li><a class="sidebar-link" href="#projects">Projects</a></li>
-                        <li><a class="sidebar-link" href="#contact">Contact</a></li>
+                          <li><a class="sidebar-link" href="#about">About Me</a></li>
+                          <li><a class="sidebar-link" href="#skills">Skills</a></li>
+                          <li><a class="sidebar-link" href="#projects">Projects</a></li>
+                          <li><a class="sidebar-link" href="books.html">Books</a></li>
                     </ul>
                 </section>
             </nav>
